# bgp

./: Cargo.toml  README.md  bgpd_overview.drawio
bgpd/: Cargo.toml  build.rs
bgpd/proto/: route_service.proto
bgpd/src/: lib.rs  main.rs
bgpd/src/bgp_packet/: capabilities.rs  constants.rs  messages.rs  mod.rs  nlri.rs  path_attributes.rs  traits.rs
bgpd/src/route_client/: dump.rs  fib_state.rs  main.rs  mod.rs  netlink.rs  southbound_interface.rs
bgpd/src/server/: bgp_server.rs  config.rs  data_structures.rs  mod.rs  peer.rs  rib_manager.rs  route_server.rs  server.rs
bgpd/src/streamer_cli/: main.rs
configs/: bgplab.json  pr01.home.json  pr01.man.json  test.json
crates/bgp_packet/: Cargo.toml
crates/bgp_packet/src/: capabilities.rs  constants.rs  messages.rs  nlri.rs  path_attributes.rs  traits.rs
crates/packet/: Cargo.toml
crates/packet/src/: constants.rs  errors.rs  ip_prefix.rs  lib.rs  message.rs  notification.rs  parser.rs
crates/route_client/: Cargo.toml  build.rs
crates/route_client/proto/: route_service.proto
crates/route_client/src/: connector.rs  fib_state.rs  lib.rs  netlink.rs  southbound_interface.rs
crates/server/: Cargo.toml
crates/server/proto/: route_service.proto
crates/server/src/: bgp_server.rs  config.rs  data_structures.rs  filter_eval.rs  lib.rs  peer.rs  rib_manager.rs  route_server.rs
crates/server/src/path/: mod.rs  path_data.rs  path_set.rs
netlink/: Cargo.toml  README.md  netlink.pcap
netlink/src/: constants.rs  lib.rs  main.rs  netlink_interface.rs  packet.rs  traits.rs
tests/integration_tests/: Cargo.toml
tests/integration_tests/tests/: basic_startup.rs
