[package]
name = "route_client"

edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lints]
workspace = true

[dependencies]
async-trait.workspace                      = true
bgp_packet.workspace                       = true
byteorder                                  = "1.4.3"
bytes.workspace                            = true
eyre.workspace                             = true
futures.workspace                          = true
ip_network_table-deps-treebitmap.workspace = true
log.workspace                              = true
netlink-packet-route.workspace             = true
netlink-packet-utils.workspace             = true
nom                                        = "7.1"
prost.workspace                            = true
rtnetlink.workspace                        = true
serde.workspace                            = true
tokio-stream                               = "0.1.14"
tokio-util                                 = { version = "0.7.10", features = ["codec"] }
tokio.workspace                            = true
tonic.workspace                            = true
tracing.workspace                          = true
warp.workspace                             = true

[build-dependencies]
tonic-build = { version = "0.5.1", features = ["compression", "prost"] }
