[package]
name = "bgp_server"

edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lints]
workspace = true

[dependencies]
bgp_packet.workspace                       = true
byteorder                                  = "1.4.3"
bytes.workspace                            = true
ip_network_table-deps-treebitmap.workspace = true
log.workspace                              = true
nom                                        = "7.1"
prost.workspace                            = true
serde.workspace                            = true
tokio-stream                               = "0.1.14"
tokio-util                                 = { version = "0.7.10", features = ["codec"] }
tokio.workspace                            = true
tonic.workspace                            = true
tracing.workspace                          = true
warp.workspace                             = true

[build-dependencies]
tonic-build = { version = "0.5.1", features = ["compression", "prost"] }
