[package]
name = "integration_tests"
version = "0.1.0"
authors = ["Rayhaan Jaufeerally <rayhaan@rayhaan.ch>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
bgpd = { path = "../../bgpd" }
bytes = "1.*"
tokio = { version = "1.6.1", features = ["full"] }
tokio-util = { version = "0.6.7", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = "0.2"
libc = "0.2.126"

[dev-dependencies]
serial_test = "0.5.1"

[unstable]
thread_id_value = true