[package]
authors = ["Rayhaan Jaufeerally <rayhaan@rayhaan.ch>"]
edition = "2018"
license = "Apache-2.0"
name    = "integration_tests"
version = "0.1.0"

[dependencies]
bgp_packet.workspace   = true
bgp_server.workspace   = true
bytes                  = "1.*"
libc                   = "0.2.126"
route_client.workspace = true
tokio                  = { version = "1.6.1", features = ["full"] }
tokio-util             = { version = "0.7.10", features = ["codec"] }
tracing                = "0.1"
tracing-subscriber     = "0.2"

[dev-dependencies]
serial_test = "0.5.1"
